fix styling for truncation of large values in scope/stdout panels

--- a/sim/py/MiniPy/main.css
+++ b/sim/py/MiniPy/main.css
@@ -304,6 +304,8 @@
 }
 
 .mp-debugger .mp-runtime ul li .value span {
+	overflow: hidden;
+	white-space: nowrap;
 	padding-right: 8px;
 }
 
